# Stellar-Nexus-Browser

./: CMakeLists.txt  README.md  build.sh  run.sh
resources/: resources.qrc
src/: bookmarkmanager.cpp  bookmarkmanager.h  browserpage.cpp  browserpage.h  downloadmanager.cpp  downloadmanager.h  historymanager.cpp  historymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  navbar.cpp  navbar.h  settingsdialog.cpp  settingsdialog.h  tabbar.cpp  tabbar.h  translationmanager.cpp  translationmanager.h
